--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "create-react-app-stylus": "^1.1.1",
     "history": "^4.7.2",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
