--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "axios": "^0.17.1",
     "create-react-app-stylus": "^1.1.1",
     "history": "^4.7.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
+    "prettier": "^1.9.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -19,11 +22,18 @@
     "redux-thunk": "^2.2.0",
     "weather-icons": "^1.3.2"
   },
+  "lint-staged": {
+      "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+       "git add"
+     ]
+   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
     "redux-logger": "^3.0.6"
