--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint-staged": "^6.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
     "prettier": "^1.9.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -19,21 +21,24 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "weather-icons": "^1.3.2"
+    "redux-thunk": "^2.2.0"
   },
   "lint-staged": {
-      "src/**/*.{js,jsx,json,css}": [
+    "src/**/*.{js,jsx,json,css}": [
       "prettier --single-quote --write",
-       "git add"
-     ]
-   },
+      "git add"
+    ]
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js"
   },
   "devDependencies": {
     "redux-logger": "^3.0.6"
