--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weatherapp-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "axios": "^0.17.1",
     "create-react-app-stylus": "^1.1.1",
@@ -47,6 +47,6 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Fortunat Mutunda",
+  "license": "MIT"
 }
