--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "weatherapp-react",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": false,
   "dependencies": {
     "axios": "^0.19.0",
+    "connected-react-router": "^6.4.0",
     "create-react-app-stylus": "^1.1.1",
     "history": "^4.7.2",
     "husky": "^2.4.0",
@@ -16,10 +17,9 @@
     "prop-types": "^15.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^5.1.1",
+    "react-redux": "^7.0.3",
     "react-render-html": "^0.6.0",
-    "react-router": "^5.0.1",
-    "react-router-redux": "^5.0.0-alpha.9",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
@@ -42,11 +42,28 @@
     "build": "npm-run-all build-css build-js"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "redux-logger": "^3.0.6"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
   "keywords": [],
   "author": "Fortunat Mutunda",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
