--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,8 @@
 -Dsonar.sources=src
 -Dsonar.host.url=https://sonarcloud.io
 -Dsonar.login=e1ce30305cc9d5e545b0eb5b07ac3acb5b004acd
+sonar.pullrequest.base=master
+sonar.pullrequest.branch=*
+sonar.pullrequest.key=5
+sonar.pullrequest.provider=GitHub
+sonar.pullrequest.github.repository=FottyM/weatherapp-react
