sonnar pr testing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
-
--Dsonar.projectKey=FottyM_weatherapp-react 
--Dsonar.organization=fottym-github 
--Dsonar.sources=src
--Dsonar.host.url=https://sonarcloud.io
--Dsonar.login=e1ce30305cc9d5e545b0eb5b07ac3acb5b004acd
+sonar.projectKey=FottyM_weatherapp-react 
+sonar.organization=fottym-github 
+sonar.sources=src
+sonar.host.url=https://sonarcloud.io
+sonar.login=e1ce30305cc9d5e545b0eb5b07ac3acb5b004acd
 sonar.pullrequest.base=master
 sonar.pullrequest.branch=*
 sonar.pullrequest.key=5
